--- a/07-Formularios/css/login.css
+++ b/07-Formularios/css/login.css
@@ -1,33 +1,41 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 * {
-    font-family:'Ubuntu', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
+    width: 450px;
 }
 
-.buttons {
-    align-self: flex-start;
+.container h3 {
+    margin: 60px 0px 0px 0px;
     display: flex;
-    gap: 20px;
+    align-self: flex-start;
+    font-size: 25px;
 }
-
 
 .google-btn {
     background-color: #1A73E8;
     border: none;
     border-radius: 5px;
     height: 40px;
+    width: 270px;
     display: flex;
     align-items: center;
-    padding: 2px;
+    padding: 1.5px;
     cursor: pointer;
+}
+
+.buttons {
+    align-self: flex-start;
+    display: flex;
+    gap: 18px;
 }
 
 .google-btn:hover {
@@ -35,32 +43,35 @@
 }
 
 .google-btn picture {
-    width: 36px;
+    width: 37px;
     height: 36px;
     background-color: white;
-    border-radius: 2px;
+    border-radius: 4px;
+    margin-left: 0.5px;
+    border-bottom-right-radius: 0px;
+    border-top-right-radius: 0px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .google-btn picture img {
-    width: 75%;
+    width: 80%;
 }
 
 .google-btn span {
     color: white;
     font-weight: 500;
     padding: 15px;
-    
+    font-size: 11pt;
+    padding-left: 40px;
 }
 
 .twitter-btn {
-    color: #F2F2F2;
     background-color: #F2F2F2;
     border: none;
     border-radius: 5px;
-    width: 40px;
+    width: 45px;
     cursor: pointer;
 }
 
@@ -69,5 +80,119 @@
 }
 
 .twitter-btn picture img {
-    width: 50%;
+    margin-top: 2px;
+    width: 40%;
+    height: 34%;
+    opacity: 0.8;
+}
+
+.separator {
+    display: flex;
+    width: 100%;
+    gap: 15px;
+}
+
+.separator hr {
+    flex-grow: 1;
+    border: none;
+    border-top: 1px solid #E0E0E0;
+}
+
+.separator span {
+    color: #6E6D7A; 
+}
+
+.section-inputs {
+    display: flex;
+    gap: 10px;
+    width: 100%;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 33px;
+}
+
+label {
+    
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+label span {
+    font-weight: 700;
+}
+
+.section-inputs label input {
+    width: 80%;
+    background-color: #f3f3f4;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    outline: none;
+    font-size: 14pt;
+}
+
+label input {
+    width: 90%;
+    background-color: #f3f3f4;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    outline: none;
+    font-size: 14pt;
+    transition: box-shadow 0.2s;
+}
+
+::placeholder {
+    font-size: 16px;
+    color: #9E9EA7;
+}
+
+label input:hover {
+    background-color: white;
+    border: solid 1px #E6E6E6;
+    box-shadow: 0 0 0 3.5px #FDEDF3;
+}
+
+label input:focus {
+    background-color: white;
+    border: solid 1px #F8C4D8;
+    box-shadow: 0 0 0 3.5px #FDEDF3;
+}
+
+.checkbox-label {
+    display: flex;
+    flex-direction: row;
+}
+
+.checkbox-label input[type="checkbox"] {
+    width: 45px;
+    transition: none;
+    box-shadow: none;
+    cursor: pointer;
+    margin-bottom: 30px;
+}
+
+.checkbox-label span {
+    font-weight: 400;
+}
+
+.submit-btn {
+    background-color: #EA4C89;
+    color: white;
+    font-weight: 500;
+    font-size: 12pt;
+    text-align: center;
+    padding: 10px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.submit-btn:hover {
+    opacity: 0.75;
 }
