--- a/07-Formularios/css/exercise7.css
+++ b/07-Formularios/css/exercise7.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 * {
     font-family: 'Roboto', sans-serif;
+    background-color: #161717;
+}
+
+html {
+    color: #161717;
 }
 
 .container {
@@ -29,8 +34,8 @@
     display: flex;
     align-items: center;
     padding: 1.5px;
-    cursor: pointer;
-}
+    cursor: pointer; 
+} 
 
 .buttons {
     align-self: flex-start;
@@ -57,12 +62,14 @@
 
 .google-btn picture img {
     width: 80%;
+    background-color: white;
 }
 
 .google-btn span {
     color: white;
+    background-color: #1A73E8;
     font-weight: 500;
-    padding: 15px;
+    padding: 10px;
     font-size: 11pt;
     padding-left: 40px;
 }
@@ -76,14 +83,19 @@
 }
 
 .twitter-btn:hover {
-    background-color: #E5E5E5;
+    background-color: #d1d1d1;
+}
+
+.twitter-btn picture {
+    background-color: #F2F2F2;
 }
 
 .twitter-btn picture img {
-    margin-top: 2px;
+    background-color: #F2F2F2;
+    margin-top: 3px;
     width: 40%;
     height: 34%;
-    opacity: 0.8;
+    opacity: 1;
 }
 
 .separator {
@@ -109,6 +121,7 @@
 }
 
 form {
+    color: white;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -116,7 +129,6 @@ form {
 }
 
 label {
-    
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -128,7 +140,7 @@ label span {
 
 .section-inputs label input {
     width: 80%;
-    background-color: #f3f3f4;
+    background-color: #212121;
     border: none;
     padding: 10px 20px;
     border-radius: 10px;
@@ -138,7 +150,7 @@ label span {
 
 label input {
     width: 90%;
-    background-color: #f3f3f4;
+    background-color: #212121;
     border: none;
     padding: 10px 20px;
     border-radius: 10px;
@@ -153,7 +165,7 @@ label input {
 }
 
 label input:hover {
-    background-color: white;
+    background-color: #454045;
     border: solid 1px #E6E6E6;
     box-shadow: 0 0 0 3.5px #FDEDF3;
 }
@@ -178,6 +190,7 @@ label input:focus {
 }
 
 .checkbox-label span {
+    color: white;
     font-weight: 400;
 }
 
